     comprehensive tests for sftp escaping its interaction with globbing;
     ok dtucker@
   - djm@cvs.openbsd.org 2007/10/26 05:30:01
     [regress/sftp-glob.sh regress/test-exec.sh]
     remove "echo -E" crap that I added in last commit and use printf(1) for
     cases where we strictly require echo not to reprocess escape characters.
 - (djm) [regress/sftp-cmds.sh]
   Use more restrictive glob to pick up test files from /bin - some platforms
   ship broken symlinks there which could spoil the test.

20070927
 - (dtucker) [configure.ac atomicio.c] Fall back to including <sys/poll.h> if
   we don't have <poll.h> (eq QNX).  From bacon at cs nyu edu.
 - (dtucker) [configure.ac defines.h] Shadow expiry does not work on QNX6
   so disable it for that platform.  From bacon at cs nyu edu.

20070921
 - (djm) [atomicio.c] Fix spin avoidance for platforms that define
   EWOULDBLOCK; patch from ben AT psc.edu

20070917
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2007/08/23 02:49:43
     [auth-passwd.c auth.c session.c]
     unifdef HAVE_LOGIN_CAP; ok deraadt@ millert@
     NB. RCS ID sync only for portable
   - djm@cvs.openbsd.org 2007/08/23 02:55:51
     [auth-passwd.c auth.c session.c]
     missed include bits from last commit
     NB. RCS ID sync only for portable
   - djm@cvs.openbsd.org 2007/08/23 03:06:10
     [auth.h]
     login_cap.h doesn't belong here
     NB. RCS ID sync only for portable
   - djm@cvs.openbsd.org 2007/08/23 03:22:16
     [auth2-none.c sshd_config sshd_config.5]
     Support "Banner=none" to disable displaying of the pre-login banner;
     ok dtucker@ deraadt@
   - djm@cvs.openbsd.org 2007/08/23 03:23:26
     [sshconnect.c]
     Execute ProxyCommands with $SHELL rather than /bin/sh unconditionally
   - djm@cvs.openbsd.org 2007/09/04 03:21:03
     [clientloop.c monitor.c monitor_fdpass.c monitor_fdpass.h]
     [monitor_wrap.c ssh.c]
     make file descriptor passing code return an error rather than call fatal()